bpk-lib/crates/macbat/macros/tests/trybuild_negative/subscription_no_bindings.stderr
error: at least one `event = <Payload>, handler = <fn>` binding is required
 --> tests/trybuild_negative/subscription_no_bindings.rs:2:10
  |
2 | #[derive(Subscription)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Subscription` (in Nightly builds, run with -Z macro-backtrace for more info)
