bpk-lib/crates/macbat/macros/tests/trybuild_negative/subscription_no_bindings.rs
use macbat::Subscription;
#[derive(Subscription)]
#[batpak(input = JsonValueInput, error = StoreError)]
struct S {
    a: u8,
}
fn main() {}
